--- a/CMS/static/scss/global.scss
+++ b/CMS/static/scss/global.scss
@@ -380,3 +380,14 @@ table {
     outline: none;
 }
 
+@media (min-width: 768px) {
+  div.header-block {
+    min-width: 515px;
+  }
+}
+
+div.header{
+  min-height: 300px;
+  padding-bottom: 1em;
+  margin-bottom: 1em;
+}
